<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motion_controller_slide_test</name>
  <version>1.0.0</version>
  <description>TODO</description>
  <maintainer email="ros2user@test.com">ROS User</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <depend>custom_interfaces</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sbus_interface</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
<!-- Generated on Thu Nov 23 10:42:14 2023 -->
